--- a/frontend/src/Pages/Login/Login.css
+++ b/frontend/src/Pages/Login/Login.css
@@ -19,7 +19,7 @@
     font-size: 96px;
     text-align: center;
     position: relative;
-    margin-left: 40px;
+    margin-left: 20px;
     overflow-y: 195px;
 }
 .wrapper h5 {
@@ -34,6 +34,14 @@
     color: #495B40;
     letter-spacing: 3%;
     padding-bottom: 1px;
+}
+.wrapper .input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    /* background: salmon; */
+    margin: 30px 0;
+    margin-top: 2px;
 }
 .wrapper .input-box {
     position: relative;
@@ -64,6 +72,9 @@
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
+}
+.teks{
+    padding: 5px;
 }
 input{
     position: absolute;
@@ -105,8 +116,8 @@ input:valid + .icon{
     height: 59px;
     border-radius: 30px;
     font-size: 20px;
-    cursor: pointear;
-    margin-left: 50px;
+    cursor: pointer;
+    margin-left: 13px;
     background-color: #79B3D3;
     font-family: "Fredoka", sans-serif;
     font-optical-sizing: auto;
@@ -115,6 +126,8 @@ input:valid + .icon{
     font-variation-settings:
         "wdth" 100;
     border-color: #000000;
+    position: center;
+    left: 50px;
     
     
 }
@@ -137,7 +150,9 @@ code {
 .register-link p a:hover{
     text-decoration: underline;
 }
-
+.wrapper .p {
+    position: center;
+}
 .eyearea {
     position: absolute;
   top: 50%;
