--- a/frontend/src/Pages/Login/Login.css
+++ b/frontend/src/Pages/Login/Login.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 .mail{
     color: #130202;
@@ -14,14 +14,21 @@
     width: 420px;
     background: white ;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 .butopia {
     font-size: 96px;
     text-align: center;
     position: relative;
-    margin-left: 41px;
+    /* margin-left: 30px; */
     overflow-y: 195px;
     margin-top: 10%;
+    padding: auto;
+    margin-bottom: 5%;
+    /* width: min-content; */
+    
 }
 .butopia2{
     font-size: 90px;
@@ -29,10 +36,23 @@
     margin-left: 45px;
     position: relative;
 }
+.wrapper h2{
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    padding-bottom: 5px;
+    position: relative;
+    padding-top: 5px;
+    /* margin-left: 45%; */
+    text-align: center;
+    color: #000000;
+    margin-top: 5%;
+}
 .wrapper h5 {
     font-size: 15px;
     margin-bottom: 5%;
-    margin-top: 10%;
+    margin-top: 9%;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -44,32 +64,34 @@
 }
 .wrapper .input-box {
     position: relative;
-    width: 100%;
+    width:auto;
+    width: 41cap;
     height: 50px;
     /* background: salmon; */
     margin: 30px 0;
     margin-top: 2px;
+    scroll-padding: 20px;
+    align-items: center;
+    justify-content: center;
+    padding: auto;
+    
+    
 }
-.wrapper .input-box {
-    position: relative;
-    width: 100%;
-    height: 50px;
-    /* background: salmon; */
-    margin: 30px 0;
-    margin-top: 2px;
-}
+
 .input-box input{
     width: 456px;
     height: 59px;
+    font-weight: 500; /* ukuran font (Medium)*/
     background: #ffffff;
     line-height: 80px;
-    
+    font-family: "Poppins", sans-serif;
     border: none;
     outline: black;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 40px;
     stroke: black;
     padding: 20px 45px 20px 20px;
+    align-items: center;
 }
 .input-box input::placeholder{
     padding-left: 70px;
@@ -135,6 +157,11 @@ input:valid + .icon{
     border-color: #000000;
     position: center;
     left: 50px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    overflow-x: auto;
+    margin-top: 10%;
     
     
 }
@@ -145,9 +172,10 @@ code {
 .wrapper .register-link{
     font-family: "Poppins", sans-serif;
     font-size: 15px;
-    text-align: center;
-    margin-left: 15px;
     margin: 10px;
+    text-align: center;
+    padding-right: 10px;
+    
 }
 .register-link p a{
     color: #495B40;
@@ -157,10 +185,7 @@ code {
 .register-link p a:hover{
     text-decoration: underline;
 }
-.wrapper .p {
-    position: center; 
-    margin-left: 20px;
-}
+
 .eyearea {
     position: absolute;
   top: 50%;
