--- a/frontend/src/Pages/Login/Login.css
+++ b/frontend/src/Pages/Login/Login.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 .mail{
@@ -16,19 +17,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 .butopia {
     font-size: 96px;
     text-align: center;
     position: relative;
+    /* margin-left: 1; */
     /* margin-left: 30px; */
     overflow-y: 195px;
     margin-top: 10%;
     padding: auto;
     margin-bottom: 5%;
     /* width: min-content; */
-    
+
 }
 .butopia2{
     font-size: 90px;
@@ -44,7 +46,7 @@
     padding-bottom: 5px;
     position: relative;
     padding-top: 5px;
-    /* margin-left: 45%; */
+    margin-left: 1%;
     text-align: center;
     color: #000000;
     margin-top: 5%;
@@ -52,6 +54,7 @@
 .wrapper h5 {
     font-size: 15px;
     margin-bottom: 5%;
+    margin-top: 10%;
     margin-top: 9%;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
@@ -64,6 +67,15 @@
 }
 .wrapper .input-box {
     position: relative;
+    width: 100%;
+    height: 50px;
+    /* background: salmon; */
+    margin: 30px 0;
+    margin-top: 2px;
+}
+.wrapper .input-box {
+    position: relative;
+    width: 100%;
     width:auto;
     width: 41cap;
     height: 50px;
@@ -74,8 +86,8 @@
     align-items: center;
     justify-content: center;
     padding: auto;
-    
-    
+
+
 }
 
 .input-box input{
@@ -84,6 +96,7 @@
     font-weight: 500; /* ukuran font (Medium)*/
     background: #ffffff;
     line-height: 80px;
+
     font-family: "Poppins", sans-serif;
     border: none;
     outline: black;
@@ -146,7 +159,7 @@ input:valid + .icon{
     border-radius: 30px;
     font-size: 20px;
     cursor: pointer;
-    margin-left: 50px;
+    margin-left: 53px;
     background-color: #79B3D3;
     font-family: "Fredoka", sans-serif;
     font-optical-sizing: auto;
@@ -162,8 +175,8 @@ input:valid + .icon{
     display: flex;
     overflow-x: auto;
     margin-top: 10%;
-    
-    
+
+
 }
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -172,10 +185,12 @@ code {
 .wrapper .register-link{
     font-family: "Poppins", sans-serif;
     font-size: 15px;
+    text-align: center;
+    margin-left: 15px;
     margin: 10px;
     text-align: center;
     padding-right: 10px;
-    
+
 }
 .register-link p a{
     color: #495B40;
@@ -185,6 +200,10 @@ code {
 .register-link p a:hover{
     text-decoration: underline;
 }
+.wrapper .p {
+    position: center; 
+    margin-left: 20px;
+}
 
 .eyearea {
     position: absolute;
@@ -193,19 +212,16 @@ code {
   right: 20px;
   cursor: pointer; /* Menambahkan cursor pointer untuk memberi tahu pengguna bahwa itu dapat diklik */
 }
-
 .eye-box {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
 }
-
 i {
   position: absolute;
   color: #000000;
 }
-
 .fa-eye,
 .fa-eye-slash {
   font-size: 16px; /* Sesuaikan ukuran ikon mata sesuai kebutuhan */
