--- a/frontend/src/Pages/Login/Login.css
+++ b/frontend/src/Pages/Login/Login.css
@@ -3,7 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 .mail{
@@ -30,13 +29,24 @@
     padding: auto;
     margin-bottom: 5%;
     /* width: min-content; */
+    position: center;
+    font-family: "Fredoka", sans-serif;
+
 
 }
 .butopia2{
     font-size: 90px;
-    text-align: center;
     margin-left: 45px;
     position: relative;
+    text-align: center;
+    position: relative;
+    /* margin-left: 1; */
+    /* margin-left: 30px; */
+    overflow-y: 195px;
+    margin-top: 10%;
+    padding: auto;
+    margin-bottom: 5%;
+    /* width: min-content; */
 }
 .wrapper h2{
     font-family: "Nunito", sans-serif;
@@ -50,6 +60,7 @@
     text-align: center;
     color: #000000;
     margin-top: 5%;
+    font-size: 20px;
 }
 .wrapper h5 {
     font-size: 15px;
