--- a/frontend/src/Pages/Login/Login.css
+++ b/frontend/src/Pages/Login/Login.css
@@ -18,7 +18,7 @@
     justify-content: center;
 
 }
-.butopia {
+.butopia123 {
     font-size: 96px;
     text-align: center;
     position: relative;
