--- a/frontend/src/user/beranda/image.css
+++ b/frontend/src/user/beranda/image.css
@@ -15,7 +15,7 @@
     height: auto;
   }
 
-  .rectangle-button {
+  .rectangle-button123 {
     position: absolute;
     top: 515px;
     left: 70px;
