--- a/frontend/src/user/beranda/text.css
+++ b/frontend/src/user/beranda/text.css
@@ -13,7 +13,7 @@
   src: url(../../Poppins.ttf);
 }
 
-  .butopia {
+  .butopiaaa {
     position: static;
     width: 10px;
     height: 44px;
@@ -31,7 +31,7 @@
     margin-right: 50px;
   }
 
-  .headline {
+  .headline12 {
     position: static;
     width: 600px;
     line-height: 68px;
@@ -44,7 +44,7 @@
     margin-top: 265px;
   }
 
-  .sub-headline{
+  .sub-headline12{
     position: static;
     width: 600px;
     line-height: 42px;
