--- a/frontend/src/Pages/Login/Register.css
+++ b/frontend/src/Pages/Login/Register.css
@@ -182,7 +182,7 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
-.wrapper .register-link{
+.wrapper .linkiy{
     font-family: "Poppins", sans-serif;
     font-size: 15px;
     text-align: center;
@@ -192,12 +192,12 @@ code {
     padding-right: 10px;
 
 }
-.register-link p a{
+.linkiy{
     color: #495B40;
     text-decoration: none;
     font-weight: 15px;
 }
-.register-link p a:hover{
+.linkiy p a:hover{
     text-decoration: underline;
 }
 .wrapper .p {
