--- a/frontend/src/Pages/Login/Login.css
+++ b/frontend/src/Pages/Login/Login.css
@@ -19,7 +19,7 @@
     justify-content: center;
 
 }
-.butopia {
+.butopia123 {
     font-size: 96px;
     text-align: center;
     position: relative;
@@ -29,6 +29,7 @@
     margin-top: 10%;
     padding: auto;
     margin-bottom: 5%;
+    font-family: "Fredoka", sans-serif;
     /* width: min-content; */
 
 }
