--- a/frontend/src/Pages/Login/Register.css
+++ b/frontend/src/Pages/Login/Register.css
@@ -30,6 +30,7 @@
     padding: auto;
     margin-bottom: 5%;
     /* width: min-content; */
+    font-family: "Fredoka", sans-serif;
 
 }
 .butopia2{
