--- a/frontend/src/Pages/Login/Register.css
+++ b/frontend/src/Pages/Login/Register.css
@@ -38,6 +38,10 @@
     text-align: center;
     margin-left: 4px;
     position: relative;
+    /* width: min-content; */
+    font-family: "Fredoka", sans-serif;
+    font-weight: bold;
+
 }
 .wrapper h2{
     font-family: "Nunito", sans-serif;
@@ -187,8 +191,8 @@ code {
     font-family: "Poppins", sans-serif;
     font-size: 15px;
     text-align: center;
-    margin-left: 15px;
-    margin: 10px;
+    margin-left: 10px;
+    margin: 9px;
     text-align: center;
     padding-right: 10px;
 
